<resources>
    <string name="app_name">Rock-Paper-Scissors</string>
    <string name="Android">Android kompiuteris</string>
    <string name="Taskai">Žaidėjas: 0 Android: 0</string>
    <string name="Akmuo">Akmuo</string>
    <string name="Popierius">Popierius</string>
    <string name="Zirkles">Žirkls</string>
    <string name="Play">Play</string>
    <string name="Exit">Exit</string>
    <string name="Zaidejas">Žaidėjas</string>
    <string name="title_activity_ad">AdActivity</string>
    <string name="action_settings">Settings</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="buttonExit">Exit</string>
    <string name="newGame">Žaisti iš naujo</string>
</resources>
